feat: rune info single
