# src/serve/routes/runes/mod.rs
@@ -1,4 +1,5 @@
 pub mod rune_balance_at_utxo;
+pub mod rune_info;
 pub mod rune_info_batch;
 
 use crate::serve::AppState;
@@ -10,6 +11,7 @@ use axum::{
 pub fn router() -> Router<AppState> {
     Router::new()
         .route("/info", post(rune_info_batch::runes_rune_info_batch))
+        .route("/{rune_id}", get(rune_info::rune_info))
         .route(
             "/{rune}/utxos/{utxo}/balance",
             get(rune_balance_at_utxo::rune_balance_at_utxo),
